@@ -1646,6 +1646,8 @@ options.view.showFullPath=Show full path of buffer in title bar
 options.view.showSearchbar=Always show search bar
 options.view.beepOnSearchAutoWrap=Beep when searching automatically wraps
 options.view.showBufferSwitcher=Show buffer switcher
+options.view.bufferswitcher.sortBuffers=Sort Buffer Switcher
+options.view.bufferswitcher.sortByName=Sort Buffer Switcher by file name instead of path name
 options.view.bufferSwitcherMaxRowsCount=Visible rows in buffer switcher:
 options.view.sortBuffers=Sort buffer sets
 options.view.sortByName=Sort buffer sets by file name, instead of path name
